--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@algolia/fragments.js": "^2.0.0-beta.15",
+    "@types/node": "^14.14.2",
+    "@types/react": "^16.9.53",
+    "blurhash": "^1.1.3",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-blurhash": "zeroxme/react-blurhash",
+    "react-dom": "16.13.1",
+    "swr": "^0.3.6",
+    "typescript": "^4.0.3",
+    "unsplash-js": "^6.3.0"
   }
 }
