--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "blurhash": "^1.1.3",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-blurhash": "zeroxme/react-blurhash",
+    "react-blurhash": "^0.1.3",
     "react-dom": "16.13.1",
     "swr": "^0.3.6",
     "typescript": "^4.0.3",
